--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <span>Save Item</span>
                     </div>
                 </div>
-                    <div class="add-container">20
+                    <div class="add-container">
                         <div class="add-item" contenteditable="true"></div>
                     </div>
                 
