--- a/index.html
+++ b/index.html
@@ -125,5 +125,6 @@
 
     <!-- Script -->
     <script src="script.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
 </body>
 </html>
