updating comments for new implementation for mobile

--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
 
     <!-- Script -->
     <script src="script.js"></script>
+
+    <!-- Drag and Drop functionality through Polify for Mobile Devices by Ricardo Castelino -->
     <script src="DragDropTouch.js"></script>
 </body>
 </html>
