modifying to kitchen operation ordering list

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="main-title" >Productivity App</h1>
+    <h1 class="main-title" >Kitchen Productivity App</h1>
 
     <div class="drag-container">
         <ul class="drag-list">
             <!-- Backlog Column -->
             <li class="drag-column backlog-column">
                 <span class="header">
-                    <h1>Backlog</h1>
+                    <h1>Dry Goods</h1>
                 </span>
                 <!-- Backlog Content -->
                 <div id="backlog-content" class="custom-scroll">
@@ -41,7 +41,7 @@
             <!-- Progress Column -->
             <li class="drag-column progress-column">
                 <span class="header">
-                    <h1>Progress</h1>
+                    <h1>Meats and Poultry</h1>
                 </span>
                 <!-- Progress Content -->
                 <div id="progress-content" class="custom-scroll">
@@ -68,7 +68,7 @@
             <!-- Complete Column -->
             <li class="drag-column complete-column">
                 <span class="header">
-                    <h1>complete</h1>
+                    <h1>Fruit & Veg</h1>
                 </span>
                 <!-- Complete Content -->
                 <div id="complete-content" class="custom-scroll">
@@ -95,7 +95,7 @@
             <!-- On Hold Column -->
             <li class="drag-column on-hold-column">
                 <span class="header">
-                    <h1>on-hold</h1>
+                    <h1>Seafood</h1>
                 </span>
                 <!-- On Hold Content -->
                 <div id="on-hold-content" class="custom-scroll">
